--- a/docker-compose/datasources.yaml
+++ b/docker-compose/datasources.yaml
@@ -13,3 +13,20 @@ datasources:
         datasourceUid: "loki"
         tags: ["job", "instance", "pod", "namespace"]
     version: 1
+
+  - name: Loki
+    type: loki
+    uid: loki
+    access: proxy
+    url: http://loki:3100
+    basicAuth: false
+    isDefault: false
+    version: 1
+    editable: true
+    apiVersion: 1
+    jsonData:
+      derivedFields:
+        - name: TraceID
+          datasourceUid: tempo
+          matcherRegex: (?:traceID|trace_id)=(\w+)
+          url: $${__value.raw}
